# cyber-kinetic-defense-grid

./: .env.example  .gitignore  Cargo.toml  README.md
docs/: DEMO_SCRIPT.md  PLAN.md  SPEC.md
docs/decisions/: ADR-001-physics-compiler-local-llm.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: AIPanel.tsx  AttackPanel.tsx  EventLog.tsx  HardwarePanel.tsx  Header.tsx  PIDDiagram.tsx  SettingsModal.tsx  StatusBar.tsx  TabbedAIPanel.tsx  ViolationAlert.tsx
src/: lib.rs  main.rs  server.rs
src/compiler/: engine.rs  mod.rs  violation.rs
src/lemonade/: client.rs  config.rs
src/physics/: constraints.rs  mod.rs  state.rs  transitions.rs
src/telemetry/: generator.rs  mod.rs  replay.rs
